2001-04-15  Lars J. Aas  <larsa@sim.no>

        * acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Alter response on
        `config.status --version' to be more compliant with the GNU Coding
        Standards.

2001-04-15  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Show options `--file'
	and `--header' unconditionally.

2001-04-13  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: Still more minor modifications for clarity,
	felicity, and grammar.

2001-04-11  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi (AC_F77_WRAPPERS): Mention C++ as well as C.
	In the example, don't #ifdef F77_FUNC before using it, as that
	would push any errors to link-time rather than compile-time; note
	that the user can test this to invoke alternative behavior.

2001-04-11  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (Task script): Be sure that `forbidden.rx' and
	`allowed.rx' exist when AWK loads then.
	Reported by Rainer Orth.

2001-04-11  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: A few more minor modifications for clarity,
	grammar, and formatting.

2001-04-10  Lars J. Aas  <larsa@sim.no>

	* Makefile.am: AC_SUBST fixes for PACKAGE_NAME, VERSION, PACKAGE...
	* configure.in: Moved here.
	Suggested by Akim Demaille and Raja R Harinath.

2001-04-10  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS):  Re-enable logging to
	`config.log' from `config.status', but delay logging till after
	command line option processing.

2001-04-10  Lars J. Aas  <larsa@sim.no>

	* autoupdate.in (print_usage): print "\ at end of line does not
	work as expected, so change block to here-doc instead.
	(print_version): Same.

2001-04-09  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: Replace all tab characters with (8) spaces,
	lest the formatting of example code, etcetera, be messed up.

2001-04-09  Steven G. Johnson  <stevenj@alum.mit.edu>
