@@ -1351,7 +1351,9 @@ m4_define([_AC_INIT_VERSION],
   cat <<\EOF])dnl
 m4_ifset([AC_PACKAGE_STRING],
          [m4_divert_text([VERSION_BEGIN],
-                         [AC_PACKAGE_NAME configure AC_PACKAGE_VERSION
+                         [dnl
+m4_ifset([AC_PACKAGE_NAME], [AC_PACKAGE_NAME ])configure[]dnl
+m4_ifset([AC_PACKAGE_VERSION], [ AC_PACKAGE_VERSION])
 generated by GNU Autoconf AC_ACVERSION])])
 m4_divert_text([VERSION_END],
 [EOF
@@ -3681,7 +3683,8 @@ EOF
 
 cat >>$CONFIG_STATUS <<EOF
 ac_cs_version="\\
-AC_PACKAGE_NAME config.status AC_PACKAGE_VERSION
+m4_ifset([AC_PACKAGE_NAME], [AC_PACKAGE_NAME ])config.status[]dnl
+m4_ifset([AC_PACKAGE_VERSION], [ AC_PACKAGE_VERSION])
 configured by [$]0, generated by GNU Autoconf AC_ACVERSION,
   with options \"`echo "$ac_configure_args" | sed 's/[[\\""\`\$]]/\\\\&/g'`\"
 
