@@ -1,3 +1,9 @@
+2001-04-16  Pavel Roskin  <proski@gnu.org>
+
+	* acgeneral.m4 (_AC_INIT_VERSION): Use AC_PACKAGE_NAME and
+	AC_PACKAGE_VERSION only if they are defined.
+	(_AC_OUTPUT_CONFIG_STATUS): Likewise.
+
 2001-04-15  Lars J. Aas  <larsa@sim.no>
 
         * acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Alter response on
